<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ui.information.DashboardFragment">
        <ImageView
            android:id="@+id/app_image"
            android:layout_width="0dp"
            android:src="@drawable/technology_icon"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/room"
            app:layout_constraintEnd_toStartOf="@id/technologies"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/details_text_color"
            android:id="@+id/technologies"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/app_image"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/technologies_app"
            />
        <TextView
            android:id="@+id/retrofit_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/details_text_color"
            app:layout_constraintTop_toBottomOf="@id/technologies"
            app:layout_constraintStart_toEndOf="@id/app_image"
            android:textColorLink="@color/link_color"
            app:layout_constraintEnd_toEndOf="parent"
            android:autoLink="web"
            android:text="@string/retrofit_https_square_github_io_retrofit"/>
        <TextView
            android:id="@+id/android_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/details_text_color"
            app:layout_constraintTop_toBottomOf="@id/retrofit_about"
            android:textColorLink="@color/link_color"
            app:layout_constraintStart_toEndOf="@id/app_image"
            android:autoLink="web"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/androidx_https_docs_microsoft_com_ru_ru_xamarin_android_platform_androidx"/>
        <TextView
            android:id="@+id/room"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/details_text_color"
            app:layout_constraintTop_toBottomOf="@id/android_x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColorLink="@color/link_color"
            android:autoLink="web"
            android:text="@string/room_vpn_https_developer_android_com_jetpack_androidx_releases_room_hl_ru"/>
        <TextView
            android:id="@+id/mvvm_mvp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/room"
            android:textColorLink="@color/link_color"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/details_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            android:autoLink="web"
            android:text="@string/mvvm_mvp_https_thinkmobiles_com_blog_mvp_vs_mvvm_android_patterns"/>
        <TextView
            android:id="@+id/moshi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/details_text_color"
            app:layout_constraintTop_toBottomOf="@id/mvvm_mvp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autoLink="web"
            android:textColorLink="@color/link_color"
            android:text="@string/moshi_https_blog_mindorks_com_moshi_json_library_for_android"/>
        <TextView
            android:id="@+id/bindings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/moshi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/details_text_color"
            android:textColorLink="@color/link_color"
            android:text="@string/bindings_vpn_https_developer_android_com_topic_libraries_data_binding_hl_ru"
            android:autoLink="web"/>
        <TextView
            android:id="@+id/about_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/bindings"
            android:textColor="@color/details_text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/about_app"/>
        <ImageView
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/about_app"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="60dp"
            android:src="@drawable/about_icon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>